// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recognizes some mods can only spawn on 'amulets' 1`] = `
Array [
  "AllDamageMasterVendorItem",
  "ReduceGlobalFlatManaCostStrIntMasterVendor",
  "LifeLeechSpeedDexIntMasterVendorItem",
]
`;

exports[`recognizes some mods can only spawn on 'belts' 1`] = `
Array [
  "AllDamageMasterVendorItem",
]
`;

exports[`recognizes some mods can only spawn on 'boots' 1`] = `Array []`;

exports[`recognizes some mods can only spawn on 'bows' 1`] = `
Array [
  "SocketedGemQualityStrMasterVendorItem",
  "BleedOnHitGainedDexMasterVendorItemUpdated_",
]
`;

exports[`recognizes some mods can only spawn on 'daggers' 1`] = `
Array [
  "LocalIncreaseSocketedSupportGemLevelIntMasterVendorItem",
  "SocketedGemQualityStrMasterVendorItem",
  "AlwaysHitsStrDexMasterVendorItem",
]
`;

exports[`recognizes some mods can only spawn on 'es_helmets' 1`] = `
Array [
  "LocalIncreaseSocketedSupportGemLevelIntMasterVendorItem",
]
`;

exports[`recognizes some mods can only spawn on 'gloves' 1`] = `
Array [
  "LifeLeechSpeedDexIntMasterVendorItem",
]
`;

exports[`recognizes some mods can only spawn on 'helmets' 1`] = `Array []`;

exports[`recognizes some mods can only spawn on 'one_hand_melee_weapon' 1`] = `
Array [
  "SocketedGemQualityStrMasterVendorItem",
  "AlwaysHitsStrDexMasterVendorItem",
]
`;

exports[`recognizes some mods can only spawn on 'rings' 1`] = `
Array [
  "AllDamageMasterVendorItem",
  "ReduceGlobalFlatManaCostStrIntMasterVendor",
]
`;

exports[`recognizes some mods can only spawn on 'shields' 1`] = `Array []`;

exports[`recognizes some mods can only spawn on 'spririt_shields' 1`] = `
Array [
  "LocalIncreaseSocketedSupportGemLevelIntMasterVendorItem",
]
`;

exports[`recognizes some mods can only spawn on 'staves' 1`] = `
Array [
  "SocketedGemQualityStrMasterVendorItem",
  "AlwaysHitsStrDexMasterVendorItem",
]
`;

exports[`recognizes some mods can only spawn on 'two_hand_melee_weapon' 1`] = `
Array [
  "SocketedGemQualityStrMasterVendorItem",
  "AlwaysHitsStrDexMasterVendorItem",
]
`;

exports[`recognizes some mods can only spawn on 'wands' 1`] = `
Array [
  "LocalIncreaseSocketedSupportGemLevelIntMasterVendorItem",
  "SocketedGemQualityStrMasterVendorItem",
]
`;
